# music-archive-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/music_archive_cli/: __init__.py  cli.py
